--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,9 @@ dependencies:
     sdk: flutter
   flutter_blue_plus: ^1.31.15
   permission_handler: ^11.3.1
+  http: ^1.1.0
+  oauth2: ^2.0.2
+  shared_preferences: ^2.2.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
